translation-methods/lab4/src/metaGrammar/MetaGrammarParser.java
package metaGrammar;// Generated from java-escape by ANTLR 4.11.1

    import grammar.NonTerminal;
    import grammar.Production;
    import grammar.Rule;
    import grammar.Terminal;
    import grammar.Grammar;
    import grammar.BroadcastSymbol;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
    import org.antlr.v4.runtime.tree.*;
import java.util.List;
    import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MetaGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, OPEN_ANGLE_BRACKET=2, CLOSE_ANGLE_BRACKET=3, COMMA=4, SEMICOLON=5, 
		PRODUCTION_SEPARATOR=6, OPEN_BRACE=7, CLOSE_BRACE=8, OPEN_SQUARE_BRACKET=9, 
		CLOSE_SQUARE_BRACKET=10, RETURNS=11, GRAMMAR=12, EPS=13, ARROW=14, COLON=15, 
		CODE=16, INHERITED_ATTRIBUTES=17, SYNTHESIZED_ATTRIBUTES=18, WORD_WITH_ALL_CAPITALIZED=19, 
		WORD_START_WITH_CAPITALIZED=20, WORD_START_WITH_SMALL=21, QUOTED_STRING=22, 
		REGEXP=23;
	public static final int
		RULE_metaGrammar = 0, RULE_startNonTerminal = 1, RULE_nameOfGrammar = 2, 
		RULE_rules = 3, RULE_rule = 4, RULE_nonTerminalRule = 5, RULE_inheritedAttributes = 6, 
		RULE_synthesizedAttributes = 7, RULE_terminalRule = 8, RULE_string = 9, 
		RULE_productions = 10, RULE_production = 11, RULE_broadcastSymbol = 12, 
		RULE_alpha = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"metaGrammar", "startNonTerminal", "nameOfGrammar", "rules", "rule", 
			"nonTerminalRule", "inheritedAttributes", "synthesizedAttributes", "terminalRule", 
			"string", "productions", "production", "broadcastSymbol", "alpha"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'<'", "'>'", "','", "';'", "'|'", "'{'", "'}'", "'['", "']'", 
			"'returns'", "'grammar'", "'eps'", "'->'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "OPEN_ANGLE_BRACKET", "CLOSE_ANGLE_BRACKET", "COMMA", "SEMICOLON", 
			"PRODUCTION_SEPARATOR", "OPEN_BRACE", "CLOSE_BRACE", "OPEN_SQUARE_BRACKET", 
			"CLOSE_SQUARE_BRACKET", "RETURNS", "GRAMMAR", "EPS", "ARROW", "COLON", 
			"CODE", "INHERITED_ATTRIBUTES", "SYNTHESIZED_ATTRIBUTES", "WORD_WITH_ALL_CAPITALIZED", 
			"WORD_START_WITH_CAPITALIZED", "WORD_START_WITH_SMALL", "QUOTED_STRING", 
			"REGEXP"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MetaGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MetaGrammarContext extends ParserRuleContext {
		public Grammar grammar;
		public NameOfGrammarContext nameOfGrammar;
		public StartNonTerminalContext startNonTerminal;
		public NameOfGrammarContext nameOfGrammar() {
			return getRuleContext(NameOfGrammarContext.class,0);
		}
		public StartNonTerminalContext startNonTerminal() {
			return getRuleContext(StartNonTerminalContext.class,0);
		}
		public RulesContext rules() {
			return getRuleContext(RulesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MetaGrammarParser.EOF, 0); }
		public MetaGrammarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metaGrammar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterMetaGrammar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitMetaGrammar(this);
		}
	}

	public final MetaGrammarContext metaGrammar() throws RecognitionException {
		MetaGrammarContext _localctx = new MetaGrammarContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_metaGrammar);

		        ArrayList<NonTerminal> nonTerminals = new ArrayList<>();
		        ArrayList<Terminal> terminals = new ArrayList<>();
		        ArrayList<Rule> grammarRules = new ArrayList<>();
		    
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			((MetaGrammarContext)_localctx).nameOfGrammar = nameOfGrammar();
			setState(29);
			((MetaGrammarContext)_localctx).startNonTerminal = startNonTerminal();
			setState(30);
			rules(terminals, nonTerminals, grammarRules);
			setState(31);
			match(EOF);

			        ((MetaGrammarContext)_localctx).grammar =  new Grammar(
			            ((MetaGrammarContext)_localctx).nameOfGrammar.text,
			            nonTerminals,
			            terminals,
			            grammarRules,
			            ((MetaGrammarContext)_localctx).startNonTerminal.nonTerminal
			        );
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartNonTerminalContext extends ParserRuleContext {
		public NonTerminal nonTerminal;
		public Token WORD_START_WITH_SMALL;
		public TerminalNode COLON() { return getToken(MetaGrammarParser.COLON, 0); }
		public TerminalNode WORD_START_WITH_SMALL() { return getToken(MetaGrammarParser.WORD_START_WITH_SMALL, 0); }
		public TerminalNode SEMICOLON() { return getToken(MetaGrammarParser.SEMICOLON, 0); }
		public StartNonTerminalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startNonTerminal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterStartNonTerminal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitStartNonTerminal(this);
		}
	}

	public final StartNonTerminalContext startNonTerminal() throws RecognitionException {
		StartNonTerminalContext _localctx = new StartNonTerminalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_startNonTerminal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			match(COLON);
			setState(35);
			((StartNonTerminalContext)_localctx).WORD_START_WITH_SMALL = match(WORD_START_WITH_SMALL);
			setState(36);
			match(SEMICOLON);

			    ((StartNonTerminalContext)_localctx).nonTerminal =  new NonTerminal((((StartNonTerminalContext)_localctx).WORD_START_WITH_SMALL!=null?((StartNonTerminalContext)_localctx).WORD_START_WITH_SMALL.getText():null), null, null);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NameOfGrammarContext extends ParserRuleContext {
		public String text;
		public Token WORD_START_WITH_CAPITALIZED;
		public TerminalNode GRAMMAR() { return getToken(MetaGrammarParser.GRAMMAR, 0); }
		public TerminalNode WORD_START_WITH_CAPITALIZED() { return getToken(MetaGrammarParser.WORD_START_WITH_CAPITALIZED, 0); }
		public TerminalNode SEMICOLON() { return getToken(MetaGrammarParser.SEMICOLON, 0); }
		public NameOfGrammarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nameOfGrammar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterNameOfGrammar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitNameOfGrammar(this);
		}
	}

	public final NameOfGrammarContext nameOfGrammar() throws RecognitionException {
		NameOfGrammarContext _localctx = new NameOfGrammarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nameOfGrammar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(GRAMMAR);
			setState(40);
			((NameOfGrammarContext)_localctx).WORD_START_WITH_CAPITALIZED = match(WORD_START_WITH_CAPITALIZED);
			setState(41);
			match(SEMICOLON);

			    ((NameOfGrammarContext)_localctx).text =  (((NameOfGrammarContext)_localctx).WORD_START_WITH_CAPITALIZED!=null?((NameOfGrammarContext)_localctx).WORD_START_WITH_CAPITALIZED.getText():null);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RulesContext extends ParserRuleContext {
		public ArrayList<Terminal> terminals;
		public ArrayList<NonTerminal> nonTerminals;
		public ArrayList<Rule> grammarRules;
		public List<RuleContext> rule_() {
			return getRuleContexts(RuleContext.class);
		}
		public RuleContext rule_(int i) {
			return getRuleContext(RuleContext.class,i);
		}
		public RulesContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public RulesContext(ParserRuleContext parent, int invokingState, ArrayList<Terminal> terminals, ArrayList<NonTerminal> nonTerminals, ArrayList<Rule> grammarRules) {
			super(parent, invokingState);
			this.terminals = terminals;
			this.nonTerminals = nonTerminals;
			this.grammarRules = grammarRules;
		}
		@Override public int getRuleIndex() { return RULE_rules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitRules(this);
		}
	}

	public final RulesContext rules(ArrayList<Terminal> terminals,ArrayList<NonTerminal> nonTerminals,ArrayList<Rule> grammarRules) throws RecognitionException {
		RulesContext _localctx = new RulesContext(_ctx, getState(), terminals, nonTerminals, grammarRules);
		enterRule(_localctx, 6, RULE_rules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WORD_WITH_ALL_CAPITALIZED || _la==WORD_START_WITH_SMALL) {
				{
				{
				setState(44);
				rule_(terminals, nonTerminals, grammarRules);
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RuleContext extends ParserRuleContext {
		public ArrayList<Terminal> terminals;
		public ArrayList<NonTerminal> nonTerminals;
		public ArrayList<Rule> grammarRules;
		public NonTerminalRuleContext nonTerminalRule;
		public TerminalRuleContext terminalRule;
		public NonTerminalRuleContext nonTerminalRule() {
			return getRuleContext(NonTerminalRuleContext.class,0);
		}
		public TerminalRuleContext terminalRule() {
			return getRuleContext(TerminalRuleContext.class,0);
		}
		public RuleContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public RuleContext(ParserRuleContext parent, int invokingState, ArrayList<Terminal> terminals, ArrayList<NonTerminal> nonTerminals, ArrayList<Rule> grammarRules) {
			super(parent, invokingState);
			this.terminals = terminals;
			this.nonTerminals = nonTerminals;
			this.grammarRules = grammarRules;
		}
		@Override public int getRuleIndex() { return RULE_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitRule(this);
		}
	}

	public final RuleContext rule_(ArrayList<Terminal> terminals,ArrayList<NonTerminal> nonTerminals,ArrayList<Rule> grammarRules) throws RecognitionException {
		RuleContext _localctx = new RuleContext(_ctx, getState(), terminals, nonTerminals, grammarRules);
		enterRule(_localctx, 8, RULE_rule);
		try {
			setState(56);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WORD_START_WITH_SMALL:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				((RuleContext)_localctx).nonTerminalRule = nonTerminalRule();

				        _localctx.nonTerminals.add(((RuleContext)_localctx).nonTerminalRule.nonTerminal);
				        _localctx.grammarRules.add(((RuleContext)_localctx).nonTerminalRule.grammarRule);
				    
				}
				break;
			case WORD_WITH_ALL_CAPITALIZED:
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				((RuleContext)_localctx).terminalRule = terminalRule();

				        _localctx.terminals.add(((RuleContext)_localctx).terminalRule.terminal);
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NonTerminalRuleContext extends ParserRuleContext {
		public NonTerminal nonTerminal;
		public Rule grammarRule;
		public Token WORD_START_WITH_SMALL;
		public InheritedAttributesContext inheritedAttributes;
		public SynthesizedAttributesContext synthesizedAttributes;
		public ProductionsContext productions;
		public TerminalNode WORD_START_WITH_SMALL() { return getToken(MetaGrammarParser.WORD_START_WITH_SMALL, 0); }
		public InheritedAttributesContext inheritedAttributes() {
			return getRuleContext(InheritedAttributesContext.class,0);
		}
		public SynthesizedAttributesContext synthesizedAttributes() {
			return getRuleContext(SynthesizedAttributesContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(MetaGrammarParser.ARROW, 0); }
		public ProductionsContext productions() {
			return getRuleContext(ProductionsContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(MetaGrammarParser.SEMICOLON, 0); }
		public NonTerminalRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonTerminalRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterNonTerminalRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitNonTerminalRule(this);
		}
	}

	public final NonTerminalRuleContext nonTerminalRule() throws RecognitionException {
		NonTerminalRuleContext _localctx = new NonTerminalRuleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_nonTerminalRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			((NonTerminalRuleContext)_localctx).WORD_START_WITH_SMALL = match(WORD_START_WITH_SMALL);
			setState(59);
			((NonTerminalRuleContext)_localctx).inheritedAttributes = inheritedAttributes();
			setState(60);
			((NonTerminalRuleContext)_localctx).synthesizedAttributes = synthesizedAttributes();
			setState(61);
			match(ARROW);
			setState(62);
			((NonTerminalRuleContext)_localctx).productions = productions();
			setState(63);
			match(SEMICOLON);

			        ((NonTerminalRuleContext)_localctx).nonTerminal =  new NonTerminal(
			            (((NonTerminalRuleContext)_localctx).WORD_START_WITH_SMALL!=null?((NonTerminalRuleContext)_localctx).WORD_START_WITH_SMALL.getText():null),
			            ((NonTerminalRuleContext)_localctx).inheritedAttributes.text,
			            ((NonTerminalRuleContext)_localctx).synthesizedAttributes.text
			        );
			        ((NonTerminalRuleContext)_localctx).grammarRule =  new Rule(
			            _localctx.nonTerminal,
			            ((NonTerminalRuleContext)_localctx).productions.prods
			        );
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InheritedAttributesContext extends ParserRuleContext {
		public String text;
		public Token INHERITED_ATTRIBUTES;
		public TerminalNode INHERITED_ATTRIBUTES() { return getToken(MetaGrammarParser.INHERITED_ATTRIBUTES, 0); }
		public InheritedAttributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inheritedAttributes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterInheritedAttributes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitInheritedAttributes(this);
		}
	}

	public final InheritedAttributesContext inheritedAttributes() throws RecognitionException {
		InheritedAttributesContext _localctx = new InheritedAttributesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_inheritedAttributes);
		try {
			setState(69);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INHERITED_ATTRIBUTES:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				((InheritedAttributesContext)_localctx).INHERITED_ATTRIBUTES = match(INHERITED_ATTRIBUTES);

				        ((InheritedAttributesContext)_localctx).text =  (((InheritedAttributesContext)_localctx).INHERITED_ATTRIBUTES!=null?((InheritedAttributesContext)_localctx).INHERITED_ATTRIBUTES.getText():null).substring(1, (((InheritedAttributesContext)_localctx).INHERITED_ATTRIBUTES!=null?((InheritedAttributesContext)_localctx).INHERITED_ATTRIBUTES.getText():null).length() - 1);
				    
				}
				break;
			case SEMICOLON:
			case PRODUCTION_SEPARATOR:
			case EPS:
			case ARROW:
			case CODE:
			case SYNTHESIZED_ATTRIBUTES:
			case WORD_WITH_ALL_CAPITALIZED:
			case WORD_START_WITH_SMALL:
				enterOuterAlt(_localctx, 2);
				{

				        ((InheritedAttributesContext)_localctx).text =  null;
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SynthesizedAttributesContext extends ParserRuleContext {
		public String text;
		public Token SYNTHESIZED_ATTRIBUTES;
		public TerminalNode SYNTHESIZED_ATTRIBUTES() { return getToken(MetaGrammarParser.SYNTHESIZED_ATTRIBUTES, 0); }
		public SynthesizedAttributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_synthesizedAttributes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterSynthesizedAttributes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitSynthesizedAttributes(this);
		}
	}

	public final SynthesizedAttributesContext synthesizedAttributes() throws RecognitionException {
		SynthesizedAttributesContext _localctx = new SynthesizedAttributesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_synthesizedAttributes);
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SYNTHESIZED_ATTRIBUTES:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				((SynthesizedAttributesContext)_localctx).SYNTHESIZED_ATTRIBUTES = match(SYNTHESIZED_ATTRIBUTES);

				        ((SynthesizedAttributesContext)_localctx).text =  (((SynthesizedAttributesContext)_localctx).SYNTHESIZED_ATTRIBUTES!=null?((SynthesizedAttributesContext)_localctx).SYNTHESIZED_ATTRIBUTES.getText():null).substring(1, (((SynthesizedAttributesContext)_localctx).SYNTHESIZED_ATTRIBUTES!=null?((SynthesizedAttributesContext)_localctx).SYNTHESIZED_ATTRIBUTES.getText():null).length() - 1);
				    
				}
				break;
			case ARROW:
				enterOuterAlt(_localctx, 2);
				{

				        ((SynthesizedAttributesContext)_localctx).text =  null;
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TerminalRuleContext extends ParserRuleContext {
		public Terminal terminal;
		public Token WORD_WITH_ALL_CAPITALIZED;
		public StringContext string;
		public TerminalNode WORD_WITH_ALL_CAPITALIZED() { return getToken(MetaGrammarParser.WORD_WITH_ALL_CAPITALIZED, 0); }
		public TerminalNode ARROW() { return getToken(MetaGrammarParser.ARROW, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(MetaGrammarParser.SEMICOLON, 0); }
		public TerminalRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminalRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterTerminalRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitTerminalRule(this);
		}
	}

	public final TerminalRuleContext terminalRule() throws RecognitionException {
		TerminalRuleContext _localctx = new TerminalRuleContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_terminalRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			((TerminalRuleContext)_localctx).WORD_WITH_ALL_CAPITALIZED = match(WORD_WITH_ALL_CAPITALIZED);
			setState(77);
			match(ARROW);
			setState(78);
			((TerminalRuleContext)_localctx).string = string();
			setState(79);
			match(SEMICOLON);

			        ((TerminalRuleContext)_localctx).terminal =  new Terminal((((TerminalRuleContext)_localctx).WORD_WITH_ALL_CAPITALIZED!=null?((TerminalRuleContext)_localctx).WORD_WITH_ALL_CAPITALIZED.getText():null), ((TerminalRuleContext)_localctx).string.text);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StringContext extends ParserRuleContext {
		public String text;
		public Token QUOTED_STRING;
		public Token REGEXP;
		public TerminalNode QUOTED_STRING() { return getToken(MetaGrammarParser.QUOTED_STRING, 0); }
		public TerminalNode REGEXP() { return getToken(MetaGrammarParser.REGEXP, 0); }
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitString(this);
		}
	}
